--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -7,12 +7,16 @@
     "certificates": "자격증",
     "projects": "프로젝트",
     "experience": "경력",
-    "contact": "연락처"
+    "contact": "연락처",
+    "demo": "공개 데모",
+    "personalPreview": "개인 CV"
   },
   "hero": {
     "title": "산업공학 학생 & AI 고급 기술자",
     "slogan": "AI가 이끄는 당신의 커리어",
     "downloadCV": "이력서 다운로드",
+    "demoCta": "공개 데모 보기",
+    "personalPreview": "개인 CV 보기",
     "specialties": {
       "ml": "머신러닝",
       "dl": "딥러닝",
@@ -155,6 +159,13 @@
     "close": "닫기",
     "viewMore": "더 보기",
     "viewLess": "접기"
+  },
+  "aiErrors": {
+    "apiKeyMissing": "AI가 설정되어 있지 않습니다. 환경에 GROQ_API_KEY를 추가하세요.",
+    "rateLimited": "요청이 너무 많습니다. 잠시 후 다시 시도하세요.",
+    "invalidRequest": "잘못된 요청입니다. 제출한 정보를 확인하세요.",
+    "processingFailed": "AI 요청을 처리할 수 없습니다.",
+    "unknown": "알 수 없는 AI 오류가 발생했습니다."
   },
   "metadata": {
     "title": "Vitae.ai | Martin Bundy - AI Digital CV",
@@ -407,6 +418,7 @@
       "fileTooLarge": "파일이 {max}MB를 초과합니다.",
       "emptyText": "CV에서 텍스트를 찾을 수 없습니다.",
       "invalidResponse": "모델 응답이 올바르지 않습니다.",
+      "rateLimited": "요청이 너무 많습니다. 잠시 후 다시 시도하세요.",
       "processingFailed": "CV를 처리할 수 없습니다.",
       "unknown": "알 수 없는 오류입니다."
     }
