docs: add screenshots and refine demo copy

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -272,10 +272,10 @@
     }
   },
   "demo": {
-    "badge": "عرض تفاعلي",
+    "badge": "??? ???",
     "titlePrefix": "جرّب",
     "titleBrand": "Vitae.ai",
-    "description": "ارفع سيرتك الذاتية وشاهد معاينة لكيف سيبدو ملفك الرقمي المدعوم بالذكاء الاصطناعي. هذه معاينة بنسبة 60% — للحصول على النتيجة الكاملة، ثبّت Vitae.ai.",
+    "description": "???? ????? ??????? ?????? ??? ?????? ?????? (????? 60%). ??? ??? ????? ?????? ??????? ?????? ????????? ?????? ??????? ??? ????? Vitae.ai.",
     "cardTitle": "أدخل معلوماتك",
     "cardSubtitle": "اختر طريقة تزويد بيانات سيرتك الذاتية",
     "tabs": {
@@ -375,7 +375,7 @@
     },
     "preview": {
       "back": "رجوع",
-      "badge": "معاينة 60%",
+      "badge": "?????? 60%",
       "sections": {
         "summary": "ملخص مهني",
         "skills": "مهارات بارزة",
@@ -392,19 +392,26 @@
         "email": "you@email.com",
         "profile": "ملخص قصير لملفك المهني وأهدافك.",
         "achievements": "ملخص الإنجازات الرئيسية",
-        "skills": ["الذكاء الاصطناعي", "تعلم الآلة", "Python", "البيانات", "الأتمتة", "التحليلات"]
+        "skills": [
+          "الذكاء الاصطناعي",
+          "تعلم الآلة",
+          "Python",
+          "البيانات",
+          "الأتمتة",
+          "التحليلات"
+        ]
       },
       "locked": {
         "projects": "مشاريع مميزة",
         "certificates": "شهادات",
         "insights": "رؤى الذكاء الاصطناعي",
-        "label": "مقفل في العرض"
+        "label": "???? ?? ??????"
       },
       "cta": {
-        "title": "هل تريد رؤية السيرة الذاتية كاملة؟",
-        "description": "ثبّت Vitae.ai لفتح جميع الأقسام والرؤى والميزات.",
-        "install": "تثبيت Vitae.ai",
-        "guide": "عرض الدليل"
+        "title": "???? ??????? ???????",
+        "description": "???? Vitae.ai ?????? ??? ?????? ??????? ??????? ?????? ????????? ???????? ?????? ???????????.",
+        "install": "????? Vitae.ai",
+        "guide": "???? ???????"
       },
       "links": {
         "linkedin": "LinkedIn",
