--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -272,10 +272,10 @@
     }
   },
   "demo": {
-    "badge": "इंटरैक्टिव डेमो",
+    "badge": "?????? ????",
     "titlePrefix": "आज़माएँ",
     "titleBrand": "Vitae.ai",
-    "description": "अपना CV अपलोड करें और देखें कि आपका AI-संचालित डिजिटल पोर्टफोलियो कैसा दिखेगा। यह 60% का प्रीव्यू है — पूरा परिणाम पाने के लिए Vitae.ai इंस्टॉल करें।",
+    "description": "???? CV ????? ???? ?? ???? 60% ?? ????? ???????? ????? ???? ???????????, AI ???????? ?? ???????? ????? Vitae.ai ??????? ???? ?? ????? ??????",
     "cardTitle": "अपनी जानकारी दर्ज करें",
     "cardSubtitle": "अपना CV डेटा देने का तरीका चुनें",
     "tabs": {
@@ -375,7 +375,7 @@
     },
     "preview": {
       "back": "वापस",
-      "badge": "60% प्रीव्यू",
+      "badge": "60% ????????",
       "sections": {
         "summary": "प्रोफ़ेशनल सार",
         "skills": "हाइलाइटेड स्किल्स",
@@ -392,19 +392,26 @@
         "email": "you@email.com",
         "profile": "आपकी प्रोफ़ेशनल प्रोफ़ाइल और लक्ष्यों का संक्षिप्त सार।",
         "achievements": "मुख्य उपलब्धियों का सार",
-        "skills": ["AI", "Machine Learning", "Python", "डेटा", "ऑटोमेशन", "एनालिटिक्स"]
+        "skills": [
+          "AI",
+          "Machine Learning",
+          "Python",
+          "डेटा",
+          "ऑटोमेशन",
+          "एनालिटिक्स"
+        ]
       },
       "locked": {
         "projects": "फीचर्ड प्रोजेक्ट्स",
         "certificates": "प्रमाणपत्र",
         "insights": "AI इनसाइट्स",
-        "label": "डेमो में लॉक"
+        "label": "???? ??? ???"
       },
       "cta": {
-        "title": "पूरा CV देखना चाहते हैं?",
-        "description": "Vitae.ai इंस्टॉल करें और सभी सेक्शन, इनसाइट्स और फीचर्स अनलॉक करें।",
-        "install": "Vitae.ai इंस्टॉल करें",
-        "guide": "गाइड देखें"
+        "title": "???? ????? ????? ????",
+        "description": "Vitae.ai ??????? ???? ???? ???? CV, AI ???????? ?? ????????-?????? ???????? ??? ????",
+        "install": "Vitae.ai ??????? ????",
+        "guide": "????? ????"
       },
       "links": {
         "linkedin": "LinkedIn",
